src/styles/form.less
input, button, textarea {
	&:focus {
		outline: 0 !important;
	}
}

input[type="checkbox"] {
	position: relative;
	width: 1rem;
	height: 1rem;
	margin: 0;
	visibility: hidden;

	&::before, &::after {
		position: absolute;
		visibility: visible;
		width: 1.1rem;
		height: 1.1rem;
		margin-top: .075rem;
		color: @color-twitch-purple;
		font: .85rem/1.2rem "FontAwesome";
		text-align: center;
	}

	&::before {
		content: "";
		background: @color-text-default;
		border: .1rem solid @color-twitch-purple;
	}

	&::after {
		content: "";
	}

	&:checked::after {
		content: @fa-var-check;
	}

	& + span {
		display: inline-block;
		margin-left: .5em;
		font-weight: normal;
	}

	&:disabled {
		@color: mix( @color-twitch-grey-dark, @color-twitch-purple, 50% );
		@background: mix( @color-twitch-grey-light, @color-twitch-purple-light, 50% );
		&::before {
			border-color: @color;
			background: @background;
		}
		&::after {
			color: @color;
		}
		& + span {
			color: mix( @color-twitch-grey-light, @color-twitch-purple-light, 80% );
		}
	}
}


input[type="text"] {
	height: 2em;
	padding: .4em;
	border: .1em solid @color-twitch-purple;
	border-radius: 0;
	font-size: inherit;
	color: @color-twitch-purple;
	text-overflow: ellipsis;
	box-shadow: 0 0 0 !important;
	-webkit-box-shadow: 0 0 0 !important;

	&:focus {
		padding: .35em;
		border: .15em solid @color-twitch-purple;
	}

	&::-webkit-input-placeholder {
		color: @color-twitch-purple-light;
	}

	&.form-control + .input-group-btn > .btn {
		min-width: 3em;
		height: 2em;
		border: 0;
		line-height: 1;
	}

	&:disabled {
		@color: mix( @color-twitch-grey-dark, @color-twitch-purple, 50% );
		@background: mix( @color-twitch-grey-light, @color-twitch-purple-light, 50% );
		border-color: @color;
		background: @background;
		color: @color;
		-webkit-user-select: none;

		&::-webkit-input-placeholder {
			color: fade( @color, 50% );
		}

		&, & + .input-group-btn > button {
			cursor: not-allowed;
		}
	}
}

.input-group .form-control:first-child {
	border-right-width: 0 !important;
}


fieldset {
	margin: 0 .5em 2em;

	> .row {
		margin-bottom: 1em;
	}

	&.submit {
		margin-top: 3em;
		text-align: center;
	}
}

legend {
	margin: 0 0 1em;
	padding: 0 0 .25em;
	border-bottom: 1px solid fade( #fff, 50% );
	color: #fff;
	font-size: 1em;
	font-weight: bold;
}


.btn {
	padding: .4em;
	border-width: .1em;
	border-radius: 0;
	font-size: 1em;
	color: @color-text-default !important;

	.btn-color();
	&.btn-success { .btn-color( @color-success ); }
	&.btn-danger { .btn-color( @color-danger ); }
	&.btn-neutral { .btn-color( @color-neutral ); }

	.btn-color( @color: @color-twitch-purple ) {
		background: @color;
		border-color: darken( @color, 10% );
		transition: background .2s ease-out;

		&:not(:disabled):hover {
			background: darken( @color, 5% );
			border-color: darken( @color, 15% );
		}
	}

	&:not(:disabled):active {
		box-shadow: inset 0 .2em .35em fade( #000, 12.5% );
	}


	&.btn-with-icon {
		min-width: 9em;
		line-height: 1.25;

		> i {
			margin-left: -1em;
			font-size: 1.25em;
			color: fade( #fff, 50% );
			vertical-align: top;
		}
	}
}


.selecter.custom {
	margin: 0;

	> .selecter-selected,
	> .selecter-options {
		color: @color-twitch-purple;
		font-size: inherit;
		box-shadow: none;
	}

	> .selecter-selected {
		position: relative;
		border: .1em solid @color-twitch-purple;
		border-radius: 0;
		padding: .2em 1.4em .2em .4em;
		background: #fff;

		&::after {
			content: @fa-var-caret-down;
			position: absolute;
			right: .4em;
			opacity: 50%;
			font-family: "FontAwesome";
		}
	}

	>.selecter-options {
		max-height: 10em;
		border: 0 !important;
		border-radius: 0 !important;
		background: transparent;
		box-shadow: 0 0 0 0.125rem @color-twitch-purple;
	}

	.selecter-item {
		padding: .2em .4em;
		border: .1em solid @color-twitch-purple;
		border-bottom: 0;
		border-radius: 0 !important;
		color: inherit;
		font-size: inherit;

		&:hover {
			background: mix( #fff, @color-twitch-purple-light, 75% );
		}

		&.selected {
			background: @color-twitch-purple !important;
			color: #fff;
		}

		&:last-child {
			border-bottom: .1em solid @color-twitch-purple;
		}
	}

	&.bottom .selecter-item:last-child {
		border: .1em solid @color-twitch-purple;
	}
}

